s3/tests_ex32/tough_test/errors.txt
cc1: fatal error: ah_u_think_ur_great.c: No such file or directory
compilation terminated.
cccgcc.c:6:2: error: expected identifier or '(' before '}' token
 }}
  ^
